[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Enemies/BlueOctorok-down-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/BlueOctorok-up-2.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/BlueOctorok-down-2.png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/BlueOctorok-left-2.png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/BlueOctorok-right-2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Enemies/BlueOctorok-left-1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Enemies/BlueOctorok-right-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemies/BlueOctorok-up-1.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Enemies/BlueOctorok.gd" type="Script" id=9]
[ext_resource path="res://SoundEffects/LOZ_Enemy_Hit.wav" type="AudioStream" id=10]
[ext_resource path="res://SoundEffects/LOZ_Enemy_Die.wav" type="AudioStream" id=11]
[ext_resource path="res://Assets/Enemies/Enemy_death-2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Enemies/Enemy_death-3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Enemies/Enemy_death-1.png" type="Texture" id=14]
[ext_resource path="res://Assets/Enemies/Enemy_death-4.png" type="Texture" id=15]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "attack-down",
"speed": 1.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "attack-left",
"speed": 1.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "attack-right",
"speed": 1.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "attack-up",
"speed": 1.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.5, 6.5 )

[node name="BlueOctorok" type="KinematicBody2D" groups=["ennemy", "touchable"]]
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Rocks" type="Node" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "left"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="HurtSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="DieSoundEffect" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="Timer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Timer3" type="Timer" parent="."]

[connection signal="is_touched" from="." to="." method="_on_Octorok_is_touched"]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="finished" from="DieSoundEffect" to="." method="_on_DieSoundEffect_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
